changes in qualification section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <metr http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Personal portfolio Website</title>
+  <title>Manveet-Portfolio</title>
 
   <!-- 
     - favicon
@@ -42,10 +42,10 @@
 
       <div class="navbar-actions">
 
-        <select name="language" id="lang">
+        <!-- <select name="language" id="lang">
           <option value="en">En</option>
           
-        </select>
+        </select> -->
 
         <button class="theme-btn" aria-label="Change Theme" title="Change Theme" data-theme-btn>
           <span class="icon"></span>
@@ -92,10 +92,6 @@
     </div>
   </header>
 
-
-
-
-
   <main>
     <article class="container">
 
@@ -120,19 +116,19 @@
 
           <h2 class="h2 hero-title">Hii, I'm  Manveet Singh  And I'm a Web Developer</h2>
 
-          <!-- <a href="#contact" class="btn btn-primary">Get in touch</a> -->
+          <a href="#contact" class="btn btn-primary">Get in touch</a>
 
         </div>
 
         <ul class="hero-social-list">
-<!-- 
+
           <li>
             <a href="#" class="hero-social-link">
               <ion-icon name="logo-facebook"></ion-icon>
 
               <div class="tooltip">Facebook</div>
             </a>
-          </li> -->
+          </li>
 
           <li>
             <a href="#" class="hero-social-link">
@@ -155,10 +151,6 @@
         <a href="#stats" class="scroll-down">Scroll</a>
 
       </section>
-
-
-
-
 
       <!-- 
         - #STATS
@@ -218,10 +210,6 @@
         </ul>
       </section>
 
-
-
-
-
       <!-- 
         - #ABOUT
       -->
@@ -248,19 +236,15 @@
             creative teams, which involves daily stand-ups and communications, source control, and project management.
           </p>
 
-          <!-- <div class="btn-group">
-            <button class="btn btn-secondary">Hire me</button>
+          <div class="btn-group">
+            <!-- <button class="btn btn-secondary">Hire me</button> -->
 
-            <button class="btn btn-primary">Download cv</button>
+            <!-- <button class="btn btn-primary">Download cv</button> -->
           </div>
 
-        </div> -->
+        </div>
 
       </section>
-
-
-
-
 
       <!-- 
         - #SKILLS
@@ -276,8 +260,7 @@
 
           <p class="section-text">
             I develop simple, intuitive and responsive user interface that helps users get things done with less effort
-            and time
-            with those technologies.
+            and time with those technologies.
           </p>
 
           <div class="skills-toggle" data-toggle-box>
@@ -456,8 +439,6 @@
 
       </section>
 
-
-
       <!-- 
   - #QUALIFICATION
 -->
@@ -467,29 +448,28 @@
   <div class="qualification-content section-content">
 
     <p class="section-subtitle">Qualification</p>
-
     <h2 class="h3 section-title">My Education </h2>
-
-    <ul class="qualification-list">
-      <li class="qualification-item">
-        <h3 class="qualification-title">Bachelor's Degree in Computer Science</h3>
-        <p class="qualification-info">Chitkara University, 2021 - 2025</p>
-      </li>
-      <li class="qualification-item">
-        <h3 class="qualification-title">Web Development Certification</h3>
-        <p class="qualification-info">Online Course, 20XX</p>
-      </li>
-      <!-- Add more qualifications as needed -->
+   
+        <span class = "section-text">Bachelor's Degree in Computer Science
+        <p class="section-text">Chitkara University, 2021 - 2025</p>
+        </span>
+       <span class="section-text">Web Development Certification
+        <p class="section-text">Online Course, 2024<p>
+        </span>
+       <!-- Add more qualifications as needed  -->
     </ul>
+    <!-- <div class="btn-group">
+      <button class="btn btn-secondary">Hire me</button> -->
+
+      <!-- <button class="btn btn-primary">Download cv</button>
+    </div> --> 
 
   </div>
 
 </section>
 
 
-
-
-      <!-- 
+     <!-- 
         - #PROJECTS
       -->
 
@@ -555,11 +535,7 @@
           </li>
         </ul>
 
-      </section>
-
-
-
-
+      </section> 
 
       <!-- 
         - #CONTACT
